# referee-reports

./: .gitmodules  LICENSE  README.md  pkldir-0.1.0-py3-none-any.whl  pyproject.toml
pkldir/pkldir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
referee_reports/: constants.py  document_readers.py  figure_utilities.py  models.py  referee_report_dataset.py
referee_reports/pkldir/: decode.py
src/referee_reports/: constants.py  document_readers.py  models.py  referee_report_dataset.py
src/scripts/: 01_read_documents.py  run_NR_lasso.py  run_NR_over_NP_lasso.py  run_NR_over_NP_ridge.py  run_NR_ridge.py  run_R_elasticnet.py  run_R_lasso.py  run_R_ridge.py  run_R_tilde_lasso.py  run_R_tilde_ridge.py  run_likelihood_ratio.py  run_ols_recommendation_decision.py  run_produce_figures_for_restricted_sample.py  run_produce_figures_for_unrestricted_sample.py  run_utils.py
src/tests/: test_document_readers.py  test_journal_doc_reader.py  test_paper_reader.py  test_referee_report_dataset.py  test_regression.py  test_report_reader.py
test_data/misc_test_assets/: duplicate_authors_referee_gender_nonames.csv  incomplete_referee_gender_nonames.csv
test_data/misc_test_assets/empty_documents-pkl/: empty_document_1.pdf.pkl  empty_document_2.pdf.pkl
test_data/misc_test_assets/papers_with_directory-pkl/: JPUBE-D-99-99999.pdf.pkl
test_data/misc_test_assets/pickled_cleaned_test_data/: journal_documents.txt.pkl
test_data/raw/: referee_gender_nonames.csv
test_data/raw/reports/: 99-99999 ref 4.docx
test_data/raw/reports-pkl/: 99-99998 ref 1.docx.pkl  99-99998 ref 2.docx.pkl  99-99998 ref 3.docx.pkl  99-99999 ref 1.docx.pkl  99-99999 ref 2.docx.pkl  99-99999 ref 3.docx.pkl  99-99999 ref 4.docx.pkl
tests/: test_journal_doc_reader.py  test_paper_reader.py  test_referee_report_dataset.py  test_regression.py  test_report_reader.py
