[tool.poetry]
name = "referee-reports"
version = "0.1.0"
description = ""
authors = ["arjun-shanmugam <65803362+arjun-shanmugam@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "referee_reports"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
pkldir = {path = "/Users/arjunshanmugam/Documents/GitHub/pkldir"}
nltk = "^3.8.1"
numpy = ">=1.24.0, <1.25.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pytest = "^7.3.2"
stargazer = "^0.0.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
