[tool.poetry]
name = "referee-reports"
version = "0.1.0"
description = ""
authors = ["arjun-shanmugam <arjun_shanmugam@alumni.brown.edu>"]
readme = "README.md"
packages = [{include = "referee_reports"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
nltk = "^3.8.1"
numpy = ">=1.24.0, <1.25.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pytest = "^7.3.2"
stargazer = "^0.0.5"
textract = "^1.6.5"
python-docx = "^0.8.11"
setuptools = "^67.8.0"
pkldir = { path = "../referee-reports/pkldir-0.1.0-py3-none-any.whl"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
