[tool.poetry]
name = "referee-reports"
version = "0.1.0"
description = ""
authors = ["arjun-shanmugam <arjun_shanmugam@alumni.brown.edu>"]
readme = "README.md"
packages = [{include = "referee_reports"}]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "3.5"
statsmodels = "0.12.1"
scikit-learn = "0.24.2"
matplotlib = "3.3.4"
pytest = "6.2.5"
stargazer = "0.0.5"
python-docx = "0.8.11"
pandas = "1.1.5"
p = "1.3.0"
numpy = "1.19.5"
scipy = "1.5.4"
textract = "1.6.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
